--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -49,12 +49,24 @@
                   "maximumError": "4kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "src/app-store/src/environments/environment.ts",
+                  "with": "src/app-store/src/environments/environment.production.ts"
+                }
+              ]
             },
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/app-store/src/environments/environment.ts",
+                  "with": "src/app-store/src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -117,10 +129,7 @@
           "builder": "@angular/build:karma",
           "options": {
             "tsConfig": "src/app-store/tsconfig.spec.json",
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ]
+            "polyfills": ["zone.js", "zone.js/testing"]
           }
         }
       }
