--- a/frontend/src/app-store/tsconfig.lib.json
+++ b/frontend/src/app-store/tsconfig.lib.json
@@ -8,8 +8,13 @@
     "declarationMap": true,
     "inlineSources": true,
     "types": [],
+    "lib": ["dom", "es2018"],
     "composite": true
   },
-  "include": ["src/**/*.ts"],
+  "angularCompilerOptions": {
+    "skipTemplateCodegen": true,
+    "strictMetadataEmit": true,
+    "enableResourceInlining": true
+  },
   "exclude": ["**/*.spec.ts"]
 }
