--- a/frontend/src/app-store/tsconfig.spec.json
+++ b/frontend/src/app-store/tsconfig.spec.json
@@ -5,7 +5,10 @@
   "compilerOptions": {
     "outDir": "../../out-tsc/spec",
     "types": ["jasmine"],
-    "composite": true
+    "composite": true,
+    "declaration": true,
+    "sourceMap": true,
+    "emitDeclarationOnly": false
   },
   "include": ["src/**/*.ts"]
 }
