--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,9 @@
     "@ngrx/effects": "^20.0.1",
     "@ngrx/entity": "^20.0.1",
     "@ngrx/store": "^20.0.1",
+    "@ngrx/store-devtools": "^20.0.1",
     "@tailwindcss/postcss": "^4.1.13",
+    "ngrx-store-localstorage": "^20.0.0",
     "ngx-interactive-org-chart": "^1.1.5",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
