--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.15.2"
+    "mysql2": "^3.15.2",
+    "uuid": "^13.0.0"
   }
 }
