enhance the view of the geonology

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -60,7 +60,7 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true,
+              "sourceMap": false,
               "fileReplacements": [
                 {
                   "replace": "src/app-store/src/environments/environment.ts",
