--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.2",
+    "serverless-http": "^4.0.0",
     "uuid": "^13.0.0"
   }
 }
