--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "start": "nodemon src/index.ts"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -33,7 +33,6 @@
     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.2",
-    "serverless-http": "^4.0.0",
     "uuid": "^13.0.0"
   }
 }
