--- a/backend/package.json
+++ b/backend/package.json
@@ -28,10 +28,12 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@types/multer": "^2.0.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.2",
     "uuid": "^13.0.0"
   }
